syntax = "proto3";


option go_package = "hello-grpc/pb";

package pb;

// 定义服务

service Greeter {
    //SayHello 方法
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string name = 1;
}


message HelloResponse {
    string reply = 1;
}